--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/dosama/nodejs-vidly-api#readme",
   "dependencies": {
-    "@google-cloud/firestore": "^4.4.0",
     "config": "^3.3.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.24.0",
     "firebase-admin": "^9.2.0",
     "joi": "^17.2.0",
     "js-guid": "^1.0.0",
