--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
     "js-guid": "^1.0.0",
     "lodash": "^4.17.20",
     "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.0"
   }
 }
